force-app/main/default/objects/API_Log__c/fields/Api_Status__c.field-meta.xml
<CustomField>
    <fullName>Api_Status__c</fullName>
    <label>Api Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Fired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>