force-app/main/default/objects/API_Log__c/fields/Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>Failed_Records__c</fullName>
    <label>Failed Records</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>