force-app/main/default/objects/API_Log__c/fields/Failed_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Retry_Count__c</fullName>
    <label>Failed Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>