force-app/main/default/objects/API_Log__c/fields/Requested_From__c.field-meta.xml
<CustomField>
    <fullName>Requested_From__c</fullName>
    <label>Requested From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>